BUG fixed problem with homepage hero and navbar not working properly on smaller screens

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -115,3 +115,23 @@
     font-size: 65px;
   }
 }
+
+@media (max-width: 390px) {
+  .hero {
+    padding: 60px 10px;
+  }
+  .hero h1 {
+    font-size: 36px;
+    word-wrap: break-word;
+  }
+  .hero h2 {
+    font-size: 24px;
+    margin: 0 10px;
+    word-wrap: break-word;
+  }
+
+  .hero h3 {
+    font-size: 12px;
+    word-wrap: break-word;
+  }
+}
