--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -5,9 +5,7 @@ body {
   width: 100%;
   min-height: 100vh;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
 }
 
 h2 {
